<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- General purpose -->
    <string name="app_name">Labomatic</string>
    <string name="original_app_name">Labomatic</string>

    <!-- Navigation drawer -->
    <string name="automatic_screen_label">Automatic analysis</string>
    <string name="manual_screen_label">Manual analysis</string>
    <string name="settings_screen_label">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Camera -->
    <string name="take_picture">Take picture</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="title_activity_recover_automatic_service">RecoverAutomaticService</string>

    <!-- Screens -->
    <string name="automatic_analysis">Automatic</string>
    <string name="manual_analysis">Manual</string>
    <string name="prompt_write_name">paciente</string>
    <string name="read_qr_code">Leer QR</string>
    <string name="or">Or</string>

    <!-- Database -->
    <string name="title_activity_dbmanager">DBManager</string>

    <!-- App's general purpose stuff -->
    <string name="login_title">Labomatic</string>

    <!-- Login activity -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_in">Log in</string>
    <string name="error_not_valid_email">The username is not an email address</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_invalid_password_empty">The password is empty</string>
    <string name="error_invalid_password_short">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="report_problems">Report a problem</string>
    <string name="info_sign_in">Not registered yet?</string>
    <string name="title_activity_sign_in">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Barcode package -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="automatic_start">Automatic start</string>
    <string name="automatic_upload">Automatic upload</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="show_me_qr">Show me a QR code</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Barcode settings -->
    <string name="apply_settings">Apply settings</string>
    <string name="reset_settings">Reset settings</string>
    <string name="drop_settings">Drop settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
