<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/automatic_start" />
            <RadioGroup
                android:id="@+id/radio_group_automatic_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/enable_automatic_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yes" />
                <RadioButton
                    android:id="@+id/disable_automatic_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/no" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/apply_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_settings"/>
        <Button
            android:id="@+id/reset_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_settings" />
        <Button
            android:id="@+id/drop_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drop_settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Spinner
            android:id="@+id/data_spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

</LinearLayout>
