<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_animation">

    <RelativeLayout
        android:id="@+id/logo_container"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/labomatic_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:src="@drawable/labomatic_logo" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/labomatic_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:fontFamily="sans-serif"
            android:text="@string/login_title"
            android:textColor="@color/primaryTextColor"
            android:textSize="50dp" />

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/actionable_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:id="@+id/username_edit_text"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_username"
            android:maxLines="1"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            android:backgroundTint="@color/primaryButtonColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="300dp"
            android:layout_height="54dp"
            android:layout_marginBottom="200dp"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_password"
            android:maxLines="1"
            android:textColor="@color/primaryTextColor"
            android:textColorHint="@color/primaryTextColor"
            android:backgroundTint="@color/primaryButtonColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_edit_text" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_in_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/action_sign_in_short"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_text"
            app:layout_constraintVertical_bias="0.112" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/report_problem_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@color/primaryDarkColor"
            android:text="@string/report_problems"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
            app:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>
