<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ai.labomatic.ui.LabomaticCamera.AutomaticAnalysisScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/qr_code"
            android:paddingLeft="100dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/read_qr_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/read_qr_code" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="185dp"
                android:layout_height="5dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/or" />

            <View
                android:layout_width="185dp"
                android:layout_height="5dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@android:color/darker_gray" />
        </RelativeLayout>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/id_edit_text"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            android:gravity="center"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/start_automatic_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/automatic_analysis" />
    </LinearLayout>

</FrameLayout>
