<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ai.labomatic.ui.Settings.SettingsFragment">

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pick a table"
            android:textSize="20dp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="29dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/tables_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="42dp"></Spinner>

            <Button
                android:id="@+id/select_table_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_alignBaseline="@+id/tables_spinner"
                android:layout_alignBottom="@+id/tables_spinner"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="14dp"
                android:text="Select table" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:layout_below="@+id/linear_layout_1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/drop_table_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="Drop button" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/data_in_table_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/automatic_start" />
            <RadioGroup
                android:id="@+id/radio_group_automatic_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/enable_automatic_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yes" />
                <RadioButton
                    android:id="@+id/disable_automatic_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/no" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="25dp"
            android:layout_height="wrap_content"></LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/automatic_upload" />
            <RadioGroup
                android:id="@+id/radio_group_automatic_upload_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/enable_automatic_upload_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/yes" />
                <RadioButton
                    android:id="@+id/disable_automatic_upload_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/no" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="25dp"
            android:layout_height="wrap_content"></LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/ip_edit_text"
                android:text="192.168.0.108"
                android:textSize="12dp"
                android:layout_width="100dp"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/apply_ip_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apply IP"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/apply_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/apply_settings"/>
        <Button
            android:id="@+id/reset_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/reset_settings" />
        <Button
            android:id="@+id/drop_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/drop_settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp"></LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp">
        <Spinner
            android:id="@+id/data_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>
    </LinearLayout>

</LinearLayout>
